textquery can get every post between two dates dd-mm-yyyy

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,21 @@
 </head>
 
 
+<style>
+
+	/* html:not(img, h1){
+
+		filter: invert(95%) hue-rotate(180deg) 
+
+		
+
+	} */
+
+</style>
+
+<html>
+
+
 <body class="bg-orange-50">
 	
 	<div class="w-full flex flex-col items-center">
@@ -37,6 +52,7 @@
 
 		<div class="results font-bold bg-gray-100 rounded-md p-4 drop-shadow-lg w-full max-w-[800px]">
 
+					
 
 		</div>
 
@@ -49,3 +65,5 @@
 	</div>		
 
 </body>
+
+</html>
