added search for posts

--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
 			GISX
 		</h1>
 
-		<form class="relative " hx-swap="innerHTML" hx-target=".results" hx-trigger="keyup" hx-post="/id/search" >
+		<form class="relative " hx-swap="innerHTML" hx-target=".results" hx-trigger="load, keyup" hx-post="/id/search" >
 
 		<i class="fa fa-search icon absolute top-[50%] left-[2em]"></i>
 		<input type="text" name="query" class="max-w-[300px] md:max-w-[400px] bg-gray-200 p-4 pl-14 outline-none text-2xl font-bold rounded-full mt-4">		
