added prod support

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-	<link rel="icon" href="./img/logo_tr.png">
+	<link rel="icon" href="/id/img/logo_tr.png">
 </head>
 
 
