basic kaschuso api functions

--- a/static/index.html
+++ b/static/index.html
@@ -24,11 +24,19 @@
 
 </style>
 
+
+
+
 <html>
 
 
 <body class="bg-orange-50">
-	
+
+
+	<div class="login" hx-post="/id/session" hx-trigger="load"></div>
+
+		
+
 	<div class="w-full flex flex-col items-center">
 
 
