started on kaschuso login api

--- a/static/kaschuso/index.html
+++ b/static/kaschuso/index.html
@@ -1,6 +1,6 @@
 <head>
 
-	<title>Gisx</title>
+	<title>Gisx - Account</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
@@ -12,12 +12,12 @@
 	<link rel="icon" href="/id/img/logo_tr.png">
 </head>
 
-
-
-
 <body>
 	
+	<div hx-get="/id/kaschuso/session" hx-swap="outerHTML" hx-trigger="load">
 
-	login
+		fetching	
+
+	</div>	
 
 </body>
