--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-	<link rel="icon" href="/id/img/logo_tr.png">
+	<link rel="icon" href="/img/logo_tr.png">
 </head>
 
 <style>
@@ -46,7 +46,7 @@
 			GISX
 		</h1>
 
-		<form class="relative " hx-swap="innerHTML" hx-target=".results" hx-trigger="load, keyup" hx-post="/id/search" onkeydown="return event.key != 'Enter'" >
+		<form class="relative " hx-swap="innerHTML" hx-target=".results" hx-trigger="load, keyup" hx-post="/search" onkeydown="return event.key != 'Enter'" >
 
 		<i class="fa fa-search icon absolute top-[50%] left-[2em]"></i>
 		<input type="text" name="query" id="query" class="max-w-[300px] md:max-w-[400px] bg-gray-200 p-4 pl-14 outline-none text-2xl font-bold rounded-full mt-4">		
